Added logo & favicon

--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="shortcut icon" href="./favicon.ico">
     <title>Voices</title>
 </head>
 <body>
-    <!-- Fix this, this is slightly positioned to the left, compared to the about and contacts page -->
     <header>
         <a href="./index.html" class="logo">
-            <div>
-                <div class="logo-label">Voices</div>
-            </div>
+            <img src="./images/Voices Logo.svg" alt="Voices" width="50">
         </a>
         <nav>
             <ul>
